compiler/tests/fail/stack_allocation/x86-64/pointer_to_local_stack.jazz
export fn bad (reg ptr u64[1] p) -> reg u64 {
  stack u64[1] s;
  reg u64 r;

  s = p;
  r = s[0];
  return r;
}
